--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-minimal
 title: Aric's homepage
 description: Where I blog about projects and STEM things
+
+aric_volman:
+  name: Aric Volman
